@@ -316,10 +316,33 @@ sjp.grpfrq <- function(varCount,
   #---------------------------------------------------
   if (missing(title) && (type == "boxplots" || type == "violin"))
     title <- NULL
+  #---------------------------------------------------
+  # check whether variable should be auto-grouped
+  #---------------------------------------------------
+  if (!is.null(autoGroupAt) && length(unique(varCount)) >= autoGroupAt) {
+    message(sprintf("%s has %i unique values and was grouped...",
+                    var.name.cnt,
+                    length(unique(varCount))))
+    # check for default auto-group-size or user-defined groups
+    agcnt <- ifelse(autoGroupAt < 30, autoGroupAt, 30)
+    # group axis labels
+    axisLabels.x <- sjmisc::group_labels(sjmisc::to_value(varCount, keep.labels = F),
+                                         groupsize = "auto",
+                                         groupcount = agcnt)
+    # group variable
+    grp.varCount <- sjmisc::group_var(sjmisc::to_value(varCount, keep.labels = F),
+                                      groupsize = "auto",
+                                      as.num = TRUE,
+                                      groupcount = agcnt)
+    # set value labels
+    sjmisc::set_labels(grp.varCount) <- axisLabels.x
+  } else {
+    grp.varCount <- varCount
+  }
   # --------------------------------------------------------
   # create cross table of frequencies and percentages
   # --------------------------------------------------------
-  mydat <- create.xtab.df(varCount,
+  mydat <- create.xtab.df(grp.varCount,
                           varGroup,
                           round.prz = 2,
                           na.rm = na.rm,
@@ -375,24 +398,6 @@ sjp.grpfrq <- function(varCount,
     varGroup <- sjmisc::to_value(varGroup, keep.labels = F)
   else
     varGroup <- as.numeric(varGroup)
-  #---------------------------------------------------
-  # check whether variable should be auto-grouped
-  #---------------------------------------------------
-  if (!is.null(autoGroupAt) && length(unique(varCount)) >= autoGroupAt) {
-    message(sprintf("Variable has %i unique values and was grouped...",
-                    length(unique(varCount))))
-    # check for default auto-group-size or user-defined groups
-    agcnt <- ifelse(autoGroupAt < 30, autoGroupAt, 30)
-    # group axis labels
-    axisLabels.x <- sjmisc::group_labels(varCount,
-                                         groupsize = "auto",
-                                         groupcount = agcnt)
-    # group variable
-    varCount <- sjmisc::group_var(varCount,
-                                  groupsize = "auto",
-                                  as.num = TRUE,
-                                  groupcount = agcnt)
-  }
   # --------------------------------------------------------
   # Define amount of categories
   # --------------------------------------------------------
@@ -590,14 +595,19 @@ sjp.grpfrq <- function(varCount,
       # else calculate upper y-axis-range depending
       # on the amount of cases...
     } else if (barPosition == "stack") {
-      upper_lim <- max(pretty(table(varCount) * 1.05))
+      upper_lim <- max(pretty(table(grp.varCount) * 1.05))
     } else {
       # ... or the amount of max. answers per category
-      upper_lim <- max(pretty(table(varCount, varGroup) * 1.05))
+      upper_lim <- max(pretty(table(grp.varCount, varGroup) * 1.05))
     }
   }
   # align dodged position of labels to bar positions
-  posdodge <- ifelse(type == "lines", 0, geom.size + geom.spacing)
+  if (type == "lines")
+    posdodge <- 0
+  else if (type == "dots")
+    posdodge <- geom.spacing
+  else
+    posdodge <- geom.size + geom.spacing
   # init shaded rectangles for plot
   ganno <- NULL
   # check whether we have dots or bars
